--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "counter",
   "version": "0.1.0",
+  "homepage": "https://dennis355.github.io/currency-converter",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
